--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,10 @@
 ---
+// Importer components her
+  import Button from "../components/Button.astro";
+//   import Header from "../components/Header.astro";
+  import Footer from "../components/Footer.astro";
+  import Card from "../components/Card.astro";
+  import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -10,6 +16,14 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<!-- <Header/> -->
+		<Button variant="primary" size="medium"/>
+		<Button variant="secondary" size="medium"/>
+
+		<main>
+			<!-- Det er attributter eks. header i card men astro kalder det props -->
+			<Card sang="Lalala" text="Lorem" />
+			<img src="" alt=""><Card/>
+		</main>
 	</body>
 </html>
