--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,8 +1,11 @@
 ---
 // Importer components her
-import Index from "../pages/index.astro";
   import "../styles/global.css";
   import "../styles/tokens.css";
+
+  import Navigation from "../components/Navigation.astro";
+  import TopBar from "../components/TopBar.astro";
+  import Footer from "../components/Footer.astro";
 
   const {title} = Astro.props;
 ---
@@ -13,11 +16,12 @@ import Index from "../pages/index.astro";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{title}</title>
 	</head>
 	<body>
-		<main>
+		<Navigation/>
+		<TopBar />
             <slot/>
-		</main>
+		<Footer/>
 	</body>
 </html>
