--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,19 +3,28 @@
   import MainLayout from "../layouts/MainLayout.astro";
   import Card from "../components/Card.astro";
   import Button from "../components/Button.astro";
-  import Navigation from "../components/Navigation.astro";
-  import "../styles/tokens.css";
-  import "../styles/global.css";
+  import Shelf from "../components/Shelf.astro";
+
 ---
 
 <MainLayout title="hjem">
-	<Navigation/>
-
 	<!-- Det er attributter eks. header i card men astro kalder det props -->
-	<Card sang="Lalala" text="Lorem" />
-	<img src="" alt=""><Card/>
+	<!-- <Card sang="Lalala" text="Lorem" />
+	<img src="" alt=""><Card/> -->
 
 	<!-- <Header/> -->
-	<Button variant="primary" size="medium"/>
-	<Button variant="secondary" size="medium"/>
+	<!-- <Button variant="primary" size="medium" text="Log på"/>
+	<Button variant="secondary" size="medium"/> -->
+	<main>
+		<Shelf title="Fokus"/></Shelf>
+		<Shelf title="Spotify Playlist"></Shelf>
+	</main>
 </MainLayout>
+
+<style>
+	.hjem {
+		display: flex;
+		flex-direction: row;
+	}
+	
+</style>
