--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,20 +1,24 @@
 * {
     box-sizing: border-box;
     background-color:black;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 img, svg {
     max-width: 100%;
+    border-radius: 5px;
 }
 
 h1, h2, h3, h4 {
     color: white;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: transparent;
 }
 p {
     color: var(--text-muted);
+    background-color: transparent;
 }
 svg {
     color: var(--text-white);
     fill: "#b3b3b3";
+    background-color: transparent;
 }
